# codicat

./: .gitignore  Cargo.toml  README.ja.md  README.md  go.md
.github/workflows/: auto-release.yml  ci.yml  format.yml  release.yml
scripts/: build.sh  package.sh  release.sh
src/: cli.rs  filefilter.rs  fileview.rs  gitutil.rs  lib.rs  main.rs  treeview.rs
tests/: cli_test.rs  fileview_test.rs  gitutil_test.rs  treeview_test.rs
tests/testdata/: README.md
tests/testdata/golden/: binary  default  exclude-generated  filter  japanese  max-lines  no-content  no-tree
tests/testdata/input/exclude-generated/: generated.rs  manual.rs
tests/testdata/input/japanese/: 日本語ファイル.txt
tests/testdata/input/japanese/日本語フォルダ/: ネストされたファイル.txt
