[package]
name = "codicat"
version = "0.1.0"
edition = "2021"
authors = ["inakam"]
description = "Render directory tree and file contents from a Git repository"
license = "MIT"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.57"
walkdir = "2.4.0"
arboard = "3.3.0"
regex = "1.10.3"
