[package]
name = "codicat"
version = "0.1.0"
edition = "2021"
authors = ["inakam"]
description = "Render directory tree and file contents from a Git repository"
license = "MIT"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.57"
walkdir = "2.4.0"
arboard = "3.3.0"
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.10.1"
predicates = "3.1.0"

[features]
generate_testdata = []

[[bin]]
name = "codicat"
path = "src/main.rs"

[[bin]]
name = "generate_testdata"
path = "src/bin/generate_testdata.rs"
required-features = ["generate_testdata"]
