[package]
name = "codicat"
version = "0.1.3"
edition = "2021"
authors = ["inakam"]
description = "Render directory tree and file contents from a Git repository"
license = "MIT"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
anyhow = "1.0.97"
arboard = "3.4.1"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.19.1"

[features]
generate_testdata = []

[[bin]]
name = "codicat"
path = "src/main.rs"

[[bin]]
name = "generate_testdata"
path = "src/bin/generate_testdata.rs"
required-features = ["generate_testdata"]
